Polymer "Hello, World!"

--- a/WorkMarketingNet.Web/Views/Shared/_Layout.cshtml
+++ b/WorkMarketingNet.Web/Views/Shared/_Layout.cshtml
@@ -3,6 +3,7 @@
 <head>
 	<title>@ViewBag.Title</title>
 	<link href="/css/themes/default.css" rel="stylesheet" />
+	@RenderSection("polymer", false)
 </head>
 <body>
 	@RenderBody()
