--- a/WorkMarketingNet.Web/Views/Home/Index.cshtml
+++ b/WorkMarketingNet.Web/Views/Home/Index.cshtml
@@ -1,6 +1,16 @@
 ﻿@*
-    For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
+	For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-    ViewBag.Title = "WorkMarketingNet";
+	ViewBag.Title = "WorkMarketingNet";
 }
+
+@section polymer{
+	<!-- 1. Load platform support before any code that touches the DOM. -->
+	<script src="/lib/webcomponentsjs/webcomponents.js"></script>
+	<!-- 2. Load the component using an HTML Import -->
+	<link rel="import" href="/polymer/my-element.html"> @*TOOD: /polymer/elements/...*@
+}
+
+<!-- 3. Declare the element by its tag. -->
+<my-element></my-element>
