--- a/WorkMarketingNet.Web/Views/Home/Index.cshtml
+++ b/WorkMarketingNet.Web/Views/Home/Index.cshtml
@@ -6,11 +6,78 @@
 }
 
 @section polymer{
-	<!-- 1. Load platform support before any code that touches the DOM. -->
+	<!-- Load platform support before any code that touches the DOM. -->
 	<script src="/lib/webcomponentsjs/webcomponents.js"></script>
-	<!-- 2. Load the component using an HTML Import -->
-	<link rel="import" href="/polymer/my-element.html"> @*TOOD: /polymer/elements/...*@
+
+	<!-- Load the component using an HTML Import -->
+	<link rel="import" href="/lib/core-header-panel/core-header-panel.html">
+	<link rel="import" href="/lib/core-toolbar/core-toolbar.html">
+	<link rel="import" href="/lib/paper-tabs/paper-tabs.html">
+	<link rel="import" href="/lib/font-roboto/roboto.html">
+	@*<link rel="import" href="/polymer/my-element.html">*@
+	@*<link rel="import" href="/polymer/elements/post-card.html">*@
+	<link rel="import" href="/polymer/elements/post-list.html">
 }
 
-<!-- 3. Declare the element by its tag. -->
-<my-element></my-element>
+@section styles{
+	<style>
+		html, body {
+			height: 100%;
+			margin: 0;
+			background-color: #E5E5E5;
+			font-family: 'RobotoDraft', sans-serif;
+		}
+
+		core-header-panel {
+			height: 100%;
+			overflow: auto;
+			-webkit-overflow-scrolling: touch;
+		}
+
+		core-toolbar {
+			background: #03a9f4;
+			color: white;
+		}
+
+		#tabs {
+			width: 100%;
+			margin: 0;
+			-webkit-user-select: none;
+			-moz-user-select: none;
+			-ms-user-select: none;
+			user-select: none;
+			text-transform: uppercase;
+		}
+	</style>
+}
+
+<!-- Declare the element by its tag. -->
+@*<my-element></my-element>*@
+
+<core-header-panel>
+
+	<core-toolbar>
+		<paper-tabs id="tabs" selected="all" self-end>
+			<paper-tab name="all">All</paper-tab>
+			<paper-tab name="favorites">Favorites</paper-tab>
+		</paper-tabs>
+	</core-toolbar>
+
+	<div class="container" layout vertical center>
+
+		<post-list show="all"></post-list>
+
+	</div>
+
+</core-header-panel>
+
+@section scripts{
+	<script>
+		var tabs = document.querySelector('paper-tabs');
+		var list = document.querySelector('post-list');
+
+		tabs.addEventListener('core-select', function () {
+			list.show = tabs.selected;
+		});
+	</script>
+}
