--- a/WorkMarketingNet.Web/Views/Home/Index.cshtml
+++ b/WorkMarketingNet.Web/Views/Home/Index.cshtml
@@ -5,6 +5,12 @@
     ViewBag.Title = "WorkMarketingNet";
 }
 
+@inject WorkMarketingNet.Web.Services.ILocalizationService Localization
+
+@functions{
+	string T(string text, params object[] args) { return Localization.Translate(text, args); }
+}
+
 @section polymer{
 	<!-- Load platform support before any code that touches the DOM. -->
 	<script src="/lib/webcomponentsjs/webcomponents.js"></script>
@@ -16,20 +22,42 @@
 
 	<link rel="import" href="/lib/core-animated-pages/core-animated-pages.html">
 	<link rel="import" href="/lib/core-animated-pages/transitions/slide-from-right.html">
-
+	<link rel="import" href="/lib/core-image/core-image.html">
 	<link rel="import" href="/lib/core-icon-button/core-icon-button.html">
 	<link rel="import" href="/lib/core-icon/core-icon.html">
+	<link rel="import" href="/lib/core-icons/social-icons.html">
+	<link rel="import" href="/lib/core-icons/av-icons.html">
+	<link rel="import" href="/lib/core-icons/communication-icons.html">
+	
 
+	<link rel="import" href="/lib/paper-button/paper-button.html">
+	<link rel="import" href="/lib/paper-menu-button/paper-menu-button.html">
 	<link rel="import" href="/lib/paper-item/paper-item.html">
 	<link rel="import" href="/lib/flatiron-director/flatiron-director.html">
 	<link rel="import" href="/lib/font-roboto/roboto.html">
 	<link rel="import" href="/lib/core-a11y-keys/core-a11y-keys.html">
 	<link rel="import" href="/lib/core-ajax/core-ajax.html">
+
+	<link href="/lib/core-collapse/core-collapse.html" rel="import">
+	<link href="/lib/core-icons/core-icons.html" rel="import">	
+	<link href="/lib/paper-dropdown/paper-dropdown.html" rel="import">
+	<link href="/lib/paper-icon-button/paper-icon-button.html" rel="import">
+
+	<link rel="import" href="/lib/paper-dialog/paper-dialog.html">
+	<link rel="import" href="/lib/paper-dialog/paper-action-dialog.html">
+	<link rel="import" href="/lib/paper-button/paper-button.html">	
+
+	@*<link rel="import" href="/lib/core-label/core-label.html">
+	<link rel="import" href="/lib/paper-checkbox/paper-checkbox.html">
+
+	<link href="/lib/paper-input/paper-autogrow-textarea.html" rel="import">
+	<link href="/lib/paper-input/paper-input-decorator.html" rel="import">
+	<link href="/lib/paper-input/paper-input.html" rel="import">
+	<link href="/lib/paper-input/paper-char-counter.html" rel="import">*@
 }
 
-<body unresolved fullbleed>
 	<template is="auto-binding">
-		<!-- Route controller. -->
+		<!-- Route controller. 
 		<flatiron-director route="{{route}}" autohash></flatiron-director>
 
 		<!-- Keyboard nav controller. -->
@@ -39,23 +67,44 @@
 
 		<core-scaffold id="scaffold">
 			<nav>
-				<core-toolbar><span>Single Page Polymer</span></core-toolbar>
+				<core-toolbar>
+					<img src="/images/avatar-01.svg" />
+				</core-toolbar>
 				<core-menu valueattr="hash" selected="{{route}}" selectedModel="{{selectedPage}}" on-core-select="{{menuItemSelected}}">
 					<template repeat="{{page in pages}}">
 						<paper-item hash="{{page.hash}}" noink>
-							<core-icon icon="label{{route != page.hash ? '-outline' : ''}}"></core-icon>
+							@*<core-icon icon="label{{route != page.hash ? '-outline' : ''}}"></core-icon>*@
+							<core-icon icon="{{page.icon}}"></core-icon>
 							<a _href="{{page.url}}">{{page.name}}</a>
 						</paper-item>
 					</template>
 				</core-menu>
 			</nav>
 			<core-toolbar tool flex>
-				<div flex>Application</div>
-				<core-icon-button icon="refresh"></core-icon-button>
-				<core-icon-button icon="add"></core-icon-button>
+				<div flex class="brand">
+					<core-icon-button src="/images/logos/WorkMarketingNet/logo-48x48-w.png"><span class="work">Work</span><span class="marketing">Marketing</span><span class="net">Net</span><small>&nbsp;<sup>&reg;</sup></small></core-icon-button>		
+					@*<core-image src="/images/logos/WorkMarketingNet/logo-48x48-w.png" style="padding:5px;"></core-image>*@
+					@*<img src="/images/logos/WorkMarketingNet/logo-48x48-w.png" alt="WorkMarketingNet Logo" style="float:left; margin-right:5px;"/>
+					<span class="work">Work</span><span class="marketing">Marketing</span><span class="net">Net</span><small>&nbsp;<sup>&reg;</sup></small>*@
+				</div>
+				<paper-menu-button relative>
+					<core-icon-button src="/images/jacek-kosciesza.jpg"></core-icon-button>
+					@*<paper-icon-button icon="menu" noink></paper-icon-button>*@
+					<paper-dropdown class="dropdown">
+						<core-menu class="menu">
+							<paper-item>Account</paper-item>
+							<paper-item>Profile</paper-item>
+							<paper-item>Logout</paper-item>
+						</core-menu>
+					</paper-dropdown>
+				</paper-menu-button>
+				<paper-button raised noink class="colored" role="button" tabindex="0" on-tap="{{toggleDialog}}"><core-icon icon="social:person" aria-label="sign-in" role="img"></core-icon>@T("Sign In")</paper-button>
+				<core-icon-button icon="social:notifications-none" aria-label="notifications" role="img"></core-icon-button>
+				<core-icon-button icon="settings" aria-label="settings" role="img"></core-icon-button>	
+				@*<core-icon-button src="/images/jacek-kosciesza.jpg"></core-icon-button>*@		
 			</core-toolbar>
 			<div layout horizontal center-center fit>
-				<core-animated-pages id="pages" valueattr="hash" selected="{{route}}" transitions="slide-from-right" on-tap="{{cyclePages}}">
+				<core-animated-pages id="pages" valueattr="hash" selected="{{route}}" transitions="slide-from-right"> @*on-tap="{{cyclePages}}"*@
 					<template repeat="{{page in pages}}">
 						<section hash="{{page.hash}}" layout vertical center-center>
 							<div>{{page.name}}</div>
@@ -64,16 +113,17 @@
 				</core-animated-pages>
 			</div>
 		</core-scaffold>
+		
 	</template>
-</body>
 
 @section scripts{
 	<script>
 		var template = document.querySelector('template[is="auto-binding"]');
 		template.pages = [
-		  { name: 'Home', hash: 'home', url: '/polymer/elements/homepage.html' },
-		  { name: 'Subpage 1', hash: 'subpage1', url: '/polymer/elements/subpage1.html' },
-		  { name: 'Subpage 2', hash: 'subpage2', url: '/polymer/elements/subpage2.html' },
+		  { name: 'Home', icon: 'home', hash: 'home', url: '/polymer/elements/homepage.html' },
+		  { name: 'Companies', icon: 'communication:business', hash: 'companies', url: '/polymer/elements/companies.html' },
+		  { name: 'Glossary', icon: 'av:my-library-books', hash: 'glossary', url: '/polymer/elements/glossary.html' },
+		  { name: '@T("Settings")', icon: 'settings', hash: 'settings', url: 'settings' },
 		];
 		var DEFAULT_ROUTE = template.pages[0].hash;
 		template.addEventListener('template-bound', function (e) {
@@ -116,5 +166,9 @@
 			e.shiftKey ? sender.selectPrevious(true) :
 						 sender.selectNext(true);
 		};
+		//template.toggleDialog = function (e, detail, sender) {
+		//	var dialog = document.querySelector('#dialog');
+		//	dialog.toggle();
+		//};
 	</script>
 }
