--- a/WorkMarketingNet.Web/Views/Shared/_Layout.cshtml
+++ b/WorkMarketingNet.Web/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
 	@RenderSection("polymer", false)
 	@RenderSection("styles", false)
 </head>
-<body unresolved> @*unresolved is to prevent FOUC*@
+<body unresolved fullbleed> @*unresolved is to prevent FOUC*@
 	@RenderBody()
 	@RenderSection("scripts", false)
 </body>
